tenants/agentic-ai/llama-stack-playground/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-stack-playground
  labels:
    helm.sh/chart: llama-stack-playground-1.0.0
    app.kubernetes.io/name: llama-stack-playground
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: proxy-tls
spec:
  type: ClusterIP
  ports:
    - name: proxy
      port: 443
      targetPort: 8443
  selector:
    app.kubernetes.io/name: llama-stack-playground
    app.kubernetes.io/instance: release-name
