tenants/agentic-ai/llama-stack-playground/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: llama-stack-playground
  labels:
    helm.sh/chart: llama-stack-playground-1.0.0
    app.kubernetes.io/name: llama-stack-playground
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  to:
    kind: Service
    name: llama-stack-playground
    weight: 100
  port:
    targetPort: proxy
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
